--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -147,7 +147,7 @@
         </div>
         <div id="productIndexNew" class="row special-list">
             @{
-                foreach (var item in Model.ToList().OrderByDescending(p => p.p上架時間).Take(4))
+                foreach (var item in Model.OrderByDescending(p => p.p上架時間).Take(4))
                 {
                             <!-- start prod  -->
                             <div class="col-lg-3 col-md-6 special-grid best-seller">
@@ -157,7 +157,7 @@
                                             <div class="type-lb">
                                                 <p class="sale">Sale</p>
                                             </div>
-                                            <img src="@item.p圖片路徑" class="img-fluid shop-image" alt="Image" />
+                                            <img src="@item.p圖片路徑.FirstOrDefault()" class="img-fluid shop-image" alt="Image" />
                                         </div>
                                     </a>
                                     <div class="why-text">
@@ -217,7 +217,7 @@
                                             <div class="type-lb">
                                                 <p class="sale">Sale</p>
                                             </div>
-                                            <img src=@item.p圖片路徑 class="img-fluid shop-image" alt="Image" />
+                                            <img src=@item.p圖片路徑.FirstOrDefault() class="img-fluid shop-image" alt="Image" />
                                         </div>
                                     </a>
                                     <div class="why-text">
@@ -417,7 +417,24 @@
                 }
             });
         });
-
+        toastr.options = {
+            // 參數設定[註1]
+            "closeButton": false, // 顯示關閉按鈕
+            "debug": false, // 除錯
+            "newestOnTop": false,  // 最新一筆顯示在最上面
+            "progressBar": true, // 顯示隱藏時間進度條
+            "positionClass": "toast-bottom-left", // 位置的類別
+            "preventDuplicates": false, // 隱藏重覆訊息
+            "onclick": null, // 當點選提示訊息時，則執行此函式
+            "showDuration": "300", // 顯示時間(單位: 毫秒)
+            "hideDuration": "1000", // 隱藏時間(單位: 毫秒)
+            "timeOut": "5000", // 當超過此設定時間時，則隱藏提示訊息(單位: 毫秒)
+            "extendedTimeOut": "1000", // 當使用者觸碰到提示訊息時，離開後超過此設定時間則隱藏提示訊息(單位: 毫秒)
+            "showEasing": "swing", // 顯示動畫時間曲線
+            "hideEasing": "linear", // 隱藏動畫時間曲線
+            "showMethod": "fadeIn", // 顯示動畫效果
+            "hideMethod": "fadeOut" // 隱藏動畫效果
+        }
         //點加入購物車獲取id
         productIndexNew.on('click', '.add-to-cart-coustom', function (e) {
             e.preventDefault(); // 阻止<a>標籤的點擊預設行為
@@ -453,7 +470,7 @@
                 dataType: 'json',
                 success: function (response) {
                     console.log('Added to Cart:', response.message);
-                    $('#myModal').modal('show'); // 顯示 Modal
+                    toastr.success("已加入購物車!");
                 },
                 error: function (error) {
                     console.error('Ajax Error:', error);
