--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/ShopDetail.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/ShopDetail.cshtml
@@ -39,18 +39,13 @@
             <div class="col-xl-5 col-lg-5 col-md-6">
                 <div id="carousel-example-1" class="single-product-slider carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
-                    @if(Model.selectedProduct.p圖片路徑!=null)
+
+                    @if (Model.selectedProduct.p圖片路徑.Count() != 0)
                     {
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="@Model.selectedProduct?.p圖片路徑?" />
-                        </div>
-                    }
-                    @if (Model.attrList != null)
-                    {
-                        @foreach (var img in Model.attrList)
+                        @foreach (var img in Model.selectedProduct.p圖片路徑)
                         {
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="@img.其他子項目圖片"/>
+                         <div class="carousel-item active">
+                            <img class="d-block w-100" src="@img"/>
                         </div>
                         }
                     }
@@ -66,22 +61,14 @@
                     <ol class="carousel-indicators">
                     @{
                         
-                        @if (Model.selectedProduct.p圖片路徑 != null)
-                        {
-                        
-                            <li data-target="#carousel-example-1" data-slide-to="0" class="active">
-                                <img class="d-block w-100 img-fluid" src="@Model.selectedProduct?.p圖片路徑?"/>
-                            </li>
-                        }
-                    
-                        @if (Model.attrList != null)
+                        @if (Model.selectedProduct.p圖片路徑.Count() != 0)
                         {
                             int i = 0;
-                            @foreach (var img in Model.attrList)
+                            @foreach (var img in Model.selectedProduct.p圖片路徑)
                             {
                                 i++;
-                                <li data-target="#carousel-example-@i" data-slide-to="@i">
-                                    <img class="d-block w-100 img-fluid" src="@img.其他子項目圖片"/>
+                                <li data-target="#carousel-example-1" data-slide-to="@i">
+                                    <img class="d-block w-100 img-fluid" src="@img"/>
                                 </li>
                             }
                         }
@@ -124,16 +111,12 @@
                                 <label class="control-label">請選擇</label>
                                 <select id="attr" class="form-control">
                                     @{
-                                        
-                                        @if (Model.attrList != null)
-                                        {
-                                            
 
-                                            <option value="@Model.selectedProduct.p子項目" selected>@Model.selectedProduct.p子項目</option>
-                                            foreach (var attr in Model.attrList)
+                                        @if (Model.selectedProduct.p子項目.Count() != 0)
+                                        {
+                                            foreach (var attr in Model.selectedProduct.p子項目)
                                             {
-                                                
-                                                <option value="@attr.其他子項目">@attr.其他子項目</option>
+                                                <option value="@attr">@attr</option>
                                             }
                                         }
                                         else
