--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -87,7 +87,7 @@
                         <div class="form-group">
                             <label>類別：</label>
                             <select class="form-control" id="create_categoryid" name="ProductCategoryId">
-                              <option value="">全部訂單</option>
+                                <option value="" selected disabled>請選擇類別</option>
                                 @foreach (var category in Model.GameProductCategory)
                                 {
                                     <option value="@category.ProductCategoryId">@category.CategoryName</option>
@@ -117,12 +117,12 @@
 
                         <div class="col-md-12">
                             <label>圖片</label>
-                            <input type="file" class="form-control" id="create_image" name="ProductImage">
+                            <input type="file" class="form-control" id="create_image" name="Image">
                         </div>
                         <div class="mt-2">
                             <img id="preview-createimage" src="" alt="Image Preview" class="w-100 border">
                         </div>
-                        <button  class="mt-3 btn btn-primary btn-block" name="submitButton" id="submitButton"
+                        <button  class="mt-3 btn btn-primary btn-block" name="create-submitButton" id="create-submitButton"
                                 style="width: 100%;">
                             儲存
                         </button>
@@ -140,7 +140,6 @@
             <div class="col d-flex justify-content-between">
                 <select class="form-select" id="payList">
                     <option value="" selected disabled>請選擇類別</option>
-                    <option value="">全部訂單</option>
                                 @foreach (var category in Model.GameProductCategory)
                                 {
                                     <option value="@category.ProductCategoryId">@category.CategoryName</option>
@@ -174,7 +173,7 @@
                     <tbody>
                     </tbody>
                     <!--編輯彈出視窗-->
-                    <div class="modal fade" id="EditProductModalToggle" aria-hidden="true"
+                    <div class="modal fade" id="EditModalToggle" aria-hidden="true"
                          aria-labelledby="EditProductModalToggleLabel" tabindex="-1">
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
@@ -197,7 +196,7 @@
                                         <div class="col-md-6">
                                             <label>類別</label>
                                             <select class="form-control" id="editcategoryid" name="ProductCategoryId">
-                                             <option value="">全部訂單</option>
+                                                <option value="" selected disabled>請選擇類別</option>
                                                 @foreach (var category in Model.GameProductCategory)
                                                 {
                                                     <option value="@category.ProductCategoryId">@category.CategoryName</option>
@@ -227,7 +226,7 @@
                                         </div>
                                         <div class="col-md-12">
                                             <label>圖片</label>
-                                            <input type="file"  accept="image/*" class="form-control" id="editimage" name="ProductImage">
+                                            <input type="file"  accept="image/*" class="form-control" id="editimage" name="Image">
                                         </div>
                                         <div class=" mb-3 align-items-center mt-3">
                                             <label>目前圖片：</label>
@@ -236,7 +235,7 @@
                                             </div>
                                         </div>
 
-                                        <button type="submit" class="mt-3 btn btn-primary btn-block  submitButton-edior" id="submitButton-edior"
+                                        <button type="submit" class="mt-3 btn btn-primary btn-block  edit-submitButton" id="edit-submitButton"
                                                 style="width: 100%;">
                                             儲存
                                         </button>
@@ -273,18 +272,23 @@
         });
 
         //初始化表格==================================================
-        $(document).ready(function () {
-            var table = $('#GProduct-table').DataTable({
+                $('#GProduct-table').DataTable({
                 language: {
                     url: 'https://cdn.datatables.net/plug-ins/1.13.6/i18n/zh-HANT.json',
                 },
-                responsive: true,
+                "responsive": true,
+                "searching": true,
+                "processing": true,
+                "serverSide": false,
                 "paging": true,
+                "pagingType": "full_numbers",
+                "pageLength": 10,
+                "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "全部"]],
+                "info": true,
                 "ajax": {
                     "url": "@Url.Action("LoadDataTable", "GameProduct" , new{ area="AdminCMS"})",
                     type: 'GET',
                 },
-
                 //載入欄位資料=================================
                 "columns": [
                     { "data": "productId" },
@@ -304,15 +308,14 @@
                     {
                         "data": "productId",
                         "render": function (data, type, row) {
-                            var deleteUrl = '@Url.Action("Delete", "Product", new { area = "AdminCMS", id = "productId" })';
-                            deleteUrl = deleteUrl.replace('productId', row.productIdd);
-                            return `<button class="edit-button" data-id="${row.productId}" data-bs-toggle="modal" data-bs-target="#EditProductModalToggle"><i class="fas fa-edit"></i></button> |
+                            var deleteUrl = '@Url.Action("Delete", "GameProduct", new { area = "AdminCMS", id = "productId" })';
+                            deleteUrl = deleteUrl.replace('productId', row.productId);
+                            return `<button class="edit-button" data-id="${row.productId}" data-bs-toggle="modal" data-bs-target="#EditModalToggle"><i class="fas fa-edit"></i></button> |
                                                                                                                         <button class="btn delete-button" data-id="${row.productId}" ><i class="fas fa-trash-alt"></i></button>`;
                         }
                     },
                 ],
             });
-        });
             //編輯============================================
             $('#GProduct-table').on('click', '.edit-button', function () {
                 let id = $(this).data('id')
@@ -357,7 +360,7 @@
 
 
         //儲存按鈕==============================
-        $('.submitButton-edior').click(function () {
+        $('.edit-submitButton').click(function () {
             var ProductId = $('#editid').val()
             var ProductName = $('#editname').val();
             var ProductDescription = $('#editdescription').val();
@@ -379,7 +382,7 @@
             formData.append("RemainingQuantity", RemainingQuantity);
             formData.append("LotteryProbability", LotteryProbability);
             if (file) {
-                formData.append("ProductImage", file)
+                formData.append("Image", file)
             }
 
             $.ajax({
@@ -418,13 +421,13 @@
             }
 
             function closeModalAndReloadTable() {
-                $('#addGProductModalToggle').modal('hide');
+                $('#EditModalToggle').modal('hide');
                 $('#GProduct-table').DataTable().ajax.reload();
             }
         });
 
-            //新增商品====================
-        $(document).on("click", "#submitButton", function () {
+          //新增商品====================
+            $('#create-submitButton').click(function () {
             const ProductId = $('#create_id').val()
             const ProductName = $('#create_name').val();
             const ProductDescription = $('#create_description').val();
@@ -433,7 +436,7 @@
             const PurchasedQuantity = $('#create_purchasedquantity').val();
             const RemainingQuantity = $('#create_remainingquantity').val();
             const LotteryProbability = $('#create_rate').val();
-            var fileInput = $('#create-image')[0];
+            var fileInput = $('#create_image')[0];
             var file = fileInput.files[0];
 
             // 檢查必填欄位是否有值
@@ -446,7 +449,7 @@
             //     return; // 不執行後續動作
             // }
 
-            let formData = new FormData();
+            var formData = new FormData();
             formData.append("ProductId", ProductId);
             formData.append("Productname", ProductName);
             formData.append("ProductDescription", ProductDescription);
@@ -455,81 +458,105 @@
             formData.append("PurchasedQuantity", PurchasedQuantity);
             formData.append("RemainingQuantity", RemainingQuantity);
             formData.append("LotteryProbability", LotteryProbability);
-            formData.append("ProductImage", file);
+            if (file) {
+                formData.append("Image", file)
+            }
+            //圖片
+            $('#create_image').on('change', function () {
+                const file = this.files[0];
 
+                if (file && file.type.startsWith('image/')) {
+                    const reader = new FileReader();
 
+                    reader.onload = function (e) {
+                        $('#preview-createimage').attr('src', e.target.result);
+                    };
+
+                    reader.readAsDataURL(file);
+                } else {
+                    alert('請選擇圖片.');
+                }
+            });
+            //CreateProduct
             $.ajax({
-                url: "@Url.Action("CreateProduct" , "GameProduct" , new { area="AdminCMS" })",
-                type: "POST",
+                url: "@Url.Action("CreateProduct","GameProduct" , new { area="AdminCMS" })",
+                type: 'POST',
                 data: formData,
                 processData: false,
                 contentType: false,
                 success: function (response) {
-                    alert("Content saved successfully!");
-                     $('#addGProductModalToggle').modal('hide');
-                     $('#GProduct-table').DataTable().ajax.reload();
+                    if (response.success) {
+                        showSuccessMessage("新增成功", response.message);
+                        closeModalAndReloadTable();
+                    } else {
+                        showErrorMessage("新增失敗", response.message);
+                    }
+                },
+                error: function (error) {
+                    console.error("AJAX Request Error:", error);
                 }
-            })
-        })
-        //圖片
-        $('#create_image').on('change', function () {
-            const file = this.files[0];
+            });
 
-            if (file && file.type.startsWith('image/')) {
-                const reader = new FileReader();
+            function showSuccessMessage(title, message) {
+                Swal.fire({
+                    icon: 'success',
+                    title: title,
+                    text: message
+                });
+            }
 
-                reader.onload = function (e) {
-                    $('#preview-createimage').attr('src', e.target.result);
-                };
+            function showErrorMessage(title, message) {
+                Swal.fire({
+                    icon: 'error',
+                    title: title,
+                    text: message
+                });
+            }
 
-                reader.readAsDataURL(file);
-            } else {
-                alert('請選擇圖片.');
+            function closeModalAndReloadTable() {
+                $('#addGProductModalToggle').modal('hide');
+                $('#GProduct-table').DataTable().ajax.reload();
             }
         });
 
+
         //刪除================================================
 
-            $(document).ready(function () {
-                $(document).on("click", ".delete-button", function () {
-                    var productId = $(this).data("id");
-                    var deleteButton = $(this);
+        $(document).ready(function () {
+            $(document).on("click", ".delete-button", function () {
+                var productId = $(this).data("id");
 
-                    var confirmMessage = "確定要刪除嗎?";
-                    var confirmButtonText = "Yes, delete it!";
-
-                    Swal.fire({
-                        title: confirmMessage,
-                        icon: 'warning',
-                        showCancelButton: true,
-                        confirmButtonColor: '#3085d6',
-                        cancelButtonColor: '#d33',
-                        confirmButtonText: confirmButtonText
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            $.ajax({
-                                url: "/AdminCMS/GameProduct/Delete",
-                                type: "POST",
-                                data: { id: productId },
-                                success: function (response) {
-                                    if (response.success) {
-                                        console.log("項目已成功刪除");
-                                        deleteButton.closest("tr").remove();
-                                        $('#GProduct-table').DataTable().ajax.reload();
-                                    } else {
-                                        console.log("刪除項目失敗。");
-                                    }
-                                },
-                                error: function (error) {
-                                    console.log("刪除項目時發生錯誤：", error);
+                Swal.fire({
+                    title: '確定要刪除嗎?',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Yes, delete it!'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        var deleteButton = $(this);
+                        $.ajax({
+                            url: "/AdminCMS/GameProduct/Delete",
+                            type: "POST",
+                            data: { id: productId },
+                            success: function (response) {
+                                if (response.success) {
+                                    console.log("項目已成功刪除");
+                                    deleteButton.closest("tr").remove();
+                                    $('#GProduct-table').DataTable().ajax.reload();
+                                } else {
+                                    console.log("刪除項目失敗。");
                                 }
-                            });
-                        } else if (result.dismiss === Swal.DismissReason.cancel) {
-                            console.log("使用者取消刪除。");
-                        }
-                    });
+                            },
+                            error: function (error) {
+                                console.log("刪除項目時發生錯誤：", error);
+                            }
+                        });
+                    }
                 });
             });
+        });
 
         
     </script>
